# django-marketplace

./: .env.example  .flake8  .gitignore  README.md  Readme.md  manage.py  pyproject.toml
buysell/: asgi.py  settings.py  urls.py  wsgi.py
main/: admin.py  choices.py  forms.py  models.py  urls.py  views.py
main/migrations/: 0001_initial.py  0002_ad.py  0003_category_created_at_category_updated_at_and_more.py  0004_advertisement_contact_person_advertisement_country_and_more.py  0005_remove_advertisement_country_and_more.py  0006_advertisementimage.py  0007_alter_advertisement_price.py  0008_alter_advertisement_price.py  0009_alter_advertisementimage_advertisement.py  0010_advertisement_image_delete_advertisementimage.py  0011_savedad.py  0012_savedad_user.py  0013_rename_image_advertisement_image_1_and_more.py  0014_alter_savedad_user.py  0015_rename_image_1_advertisement_images_and_more.py  0016_subcategory_advertisement_subcategory.py  0017_alter_subcategory_name.py  0018_alter_advertisement_status_and_more.py  0019_alter_subcategory_category.py
main/templates/main/: ad-detail.html  change-ad.html  change_ad.html  create-ad.html  create_ad.html  favorites.html  home.html  my-ads-list.html  my_ads_list.html  search-field.html
static/css/: style.css
templates/: base.html  navbar.html
user_app/: forms.py  urls.py  views.py
user_app/templates/user_app/: about.html  home.html  login.html  logout.html  register.html
