[project]
name = "pythonproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asgiref==3.11.1",
    "django==6.0.6",
    "django-countries==9.0.0",
    "django-environ>=0.14.0",
    "django-phonenumber-field==8.4.0",
    "phonenumbers==9.0.32",
    "pillow>=12.3.0",
    "psycopg2-binary==2.9.12",
    "sqlparse==0.5.5",
    "typing-extensions==4.15.0",
    "tzdata==2026.2",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "flake8>=7.3.0",
    "isort>=8.0.1",
]


[tool.black]
line-length = 88
target-version = ["py313"]

[tool.isort]
profile = "black"
line_length = 88
